--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "frontEnd_Challenge",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "14.15.4",
+    "yarn": "1.22.11"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
