--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/dotenv": "^1.4.1",
     "axios": "^0.27.2",
     "core-js": "^3.19.3",
     "dotenv": "^16.0.1",
